# tshark-mcp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  pyproject.toml  server.py  test_server.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-17-professional-network-analysis.md
scripts/: release_check.py
